# studio-thing

./: .env.example  .gitignore  AGENTS.md  ALIGNMENT.md  CLAUDE.md  Makefile  PHASE_1.md  PHASE_2.md  README.md  ROADMAP.md  STUDIO_MIGRATION_PLAN.md  TASKS.md  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  sync-external-content.yml  tests.yml
apps/librarian/: CLAUDE.md  README.md
apps/workshop_bot/: CLAUDE.md  README.md  bot.py  eval.py
content/buttondown/: README.md
data/audio/: manifest.json  script_review.json  script_status.json
data/blog/: index.json
docs/: CLAUDE.md  README.md  content-pipeline.md  echoes.md  featured-posts.md  identifiers.md  issue-identifier-convention.md  journal-handling.md  librarian-tasks.md  librarian.md  publishing-process.md  publishing-workflow-wizard-plan.md  sections.md  voice-and-style.md  workshop-content-loop-design-brief.md  workshop-content-loop-progress.md
docs/agents/: eddy.md  linky.md  marky.md  patty.md  scout.md  thingy.md
docs/audits/: README.md  archive-audit-summary.md  archive-audit.md  llm-audit.json  llm-audit.md  missing-microblog-posts.md  missing-photos.md
docs/creative/: brief.md
docs/email/: buttondown-email.css
docs/phases/: build.md  publish.md  share.md
docs/programs/: campaigns.md  membership.md
docs/systems/: pinboard.md  tinylytics.md
librarian-core/: pyproject.toml
librarian-core/librarian_core/: __init__.py  corpus.py  graph.py  links.py  paths.py  retrieval.py
librarian-core/librarian_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notes/: README.md
notes/audits/: README.md  archive-audit.json  missing-microblog-posts.json  missing-photos.json
notes/design/: issue-atoms-step1-plan.md  issue-atoms.md  publishing-workflow-wizard-plan.md  studio-issue-workspace.md  workshop-bot-redesign.md  workshop-content-loop-design-brief.md
pipeline/: status.py
pipeline/audio/: CLAUDE.md  README.md  __init__.py  audio.py  briefly.py  bumpers.py  (+8 more)
reference/: README.md  librarian.md
tests/: test_audio_script.py  test_content.py  test_librarian_api.py  test_librarian_blog_corpus.py  test_librarian_corpus.py  test_librarian_dashboard_data.py  test_librarian_podcast_corpus.py
(+12370 files in other folders)
